--- a/_config.yml
+++ b/_config.yml
@@ -38,9 +38,9 @@ post_asset_folder: false
 relative_link: false
 future: true
 highlight:
-  enable: false
+  enable: true
   line_number: false
-  auto_detect: false
+  auto_detect: true
   tab_replace:
   
 # Home page setting
