--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 春秋一语
 subtitle: 涉猎阅旧闻，暂使心魂澄
-description: 活着是需要坐标的，虽然回不去，可是看得见，博客的意义正是如此
+description: 活着是需要坐标的，虽然回不去，可是看得见，博客的意义正在于此
 author: 春秋一语
 language: zh-CN
 timezone:
