Add migrate to hexo article

--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,8 @@ relative_link: false
 future: true
 highlight:
   enable: true
-  line_number: false
-  auto_detect: true
+  line_number: true
+  auto_detect: false
   tab_replace:
   
 # Home page setting
