Modify About page

--- a/_config.yml
+++ b/_config.yml
@@ -74,6 +74,7 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: polk
+tagslug: true
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
