--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,7 @@ default_category: uncategorized
 category_map:
 tag_map:
   书籍: books
+  碎语: word
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
