--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,7 @@ category_map:
 tag_map:
   书籍: books
   碎语: word
+  游戏: game
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
