--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,15 @@ search:
   path: search.xml
   field: post
   format: html
-  limit: 10000
+
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
