--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "hexo": "^3.6.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
+    "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-search": "^2.2.5",
     "hexo-generator-tag": "^0.2.0",
