--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://www.chunqiuyiyu.com
+url: https://www.chunqiuyiyu.com
 root: /
 permalink: :year/:month/:title.html
 permalink_defaults:
