--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.6.0"
+    "version": "3.7.1"
   },
   "dependencies": {
-    "hexo": "^3.6.0",
+    "hexo": "^3.7.1",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-search": "^2.2.5",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-offline": "^1.0.0",
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
