--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: 春秋一语
 subtitle: 涉猎阅旧闻，暂使心魂澄
 description: 活着是需要坐标的，虽然回不去，可是看得见，博客的意义正在于此
-author: 春秋一语
+author: chunqiuyiyu
 language: zh-CN
 timezone:
 
@@ -69,13 +69,13 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 20
+per_page: 10
 pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: polk
+theme: samljen
 
 search:
   path: search.xml
