--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,7 @@ tag_map:
   碎语: word
   游戏: game
   伤感: sadness
+  模板: template
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
