--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,7 @@ tag_map:
   伤感: sadness
   模板: template
   小说: novel
+  感悟: feelings
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
