--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,7 @@ tag_map:
   算法: algorithm
   软件: software
   2D: 2d
+  武侠: swordman
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
