--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,7 @@ tag_map:
   软件: software
   2D: 2d
   武侠: swordman
+  美食: food
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
