--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,7 @@ tag_map:
   音乐: music
   UI: ui
   趣闻: anecdote
+  动漫: cartoon
   
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
