--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,7 @@ tag_map:
   动漫: cartoon
   古典: classical
   插件: plugin
+  爱恨情仇: love-and-hate
   
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
