--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,7 @@ tag_map:
   古典: classical
   插件: plugin
   爱恨情仇: love-and-hate
+  组件: component
   
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
