--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,7 @@ tag_map:
   插件: plugin
   爱恨情仇: love-and-hate
   组件: component
+  魔幻: magic
   
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
