--- a/_config.yml
+++ b/_config.yml
@@ -79,6 +79,7 @@ tag_map:
   爱恨情仇: love-and-hate
   组件: component
   魔幻: magic
+  庆祝: celebration
   
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
